CB-4266 Notifications for DistroX and use the new notificaiton engine from core